FFHRS-9: Images section - Override width for business hero and search card - Fix missing margin on link list

--- a/src/components/fhrs/BusinessHero/businessHero.scss
+++ b/src/components/fhrs/BusinessHero/businessHero.scss
@@ -43,6 +43,18 @@
     }
   }
 
+  &__badge {
+    &::before {
+      width: 15rem;
+      height: auto;
+    }
+  }
+
+  &__link-wrapper {
+    display: block;
+    margin-top: 1rem;
+  }
+
   &__link {
     @include link;
 
